# MCP-ZTE-F680

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  zte_mcp_server.py
docs/: changelog.md
docs/superpowers/plans/: 2026-04-17-zte-fase1-lectura-formateada.md
docs/superpowers/specs/: 2026-04-17-zte-fase1-lectura-formateada-design.md
scripts/: capture_fixtures.py
src/zte_f680_mcp/: __init__.py  formatters.py  http_client.py  pages.py  parsers.py  server.py
tests/: conftest.py  test_formatters.py  test_pages.py  test_parsers.py
tests/fixtures/: IPv46_status_wan_if_t.html  README.md  app_dmz_conf_t.html  net_dhcp_dynamic_t.html  net_wlanm_secrity1_t.html  net_wlanm_secrity2_t.html  status_dev_info_t.html
